...
    }
    return undefined
  }, [sections, now])

  return (
    <SectionList
      testID="agenda-section-list"
      sections={sections}
      keyExtractor={(item) => item.id}
      contentContainerStyle={styles.content}
      stickySectionHeadersEnabled
      refreshControl={refreshControl}
      renderSectionHeader={({ section }) => (
...
