...
import 'package:timecalendar/utils/date_utils.dart';
import 'package:timecalendar/utils/snapping_list_scroll_physics.dart';
import 'package:timecalendar/widgets/calendar/calendar_hours_column.dart';
import 'package:timecalendar/widgets/calendar/calendar_week.dart';

class Calendar extends StatefulWidget {
  const Calendar(
      {Key? key,
      required this.screenHeight,
      required this.calendarWidth,
      required this.leftHoursWidth,
      required this.startHour,
      required this.endHour,
...
